Stuck on oplog visibility when inserting directly into oplog namespace in standalone mode

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc6, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0
    • Execution Team 2022-05-16, Execution Team 2022-05-30
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Writing directly to the oplog namespace in standalone mode causes any readers of the oplog to be stuck waiting for oplog visibility.

      SERVER-64125 changed the insert path to not set a timestamp in this case. That causes WiredTigerOplogManager::triggerOplogVisibilityUpdate not to be called because WiredTigerRecoveryUnit::_isTimestamped is false. Any reader waits forever for oplog visibility that never happens.

            Assignee:
            Henrik Edin
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: