SERVER-66139 Disable oplog visibility in standalone mode

(cherry picked from commit fbdcf79b38b141aa89d7b38ddcf40d4065c4c2ae)